x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

4.4.0
=====

Release date:

Wed, 27 Mar 2024 22:29:16 +0200

New features:

* Search text also in edge labels

* Implement group deletion of edges

* Apply text search on undo/redo

Bug fixes:

* Fix GitHub Issue #191: Windows: Text highlighted by the search not visible

* Fix GitHub Issue #255: Run error in ArchLinux

* Fix search field not always taking focus on startup

4.3.0
=====

Release date:

Tue, 12 Dec 2023 21:33:12 +0200

New features:

* Fix GitHub Issue #249: Option to include grid on export
    - Grid will be exported if set visible
    - Works for both PNG and SVG exports

* Fix GitHub Issue #251: Feature request: child has same colors as parent
  - Change "Copy on Drag" behavior so that only the style will be copied

* Set default filename with a timestamp in PNG and SVG export dialogs

* Disable recent file entries that don't exist anymore

Other:

* Optimize rendering of grid lines
  - Prevent situations where a zoomed-out view would have way too many grid
    lines visible, even multiple lines per pixel

4.2.0
=====

Release date:

Thu, 18 May 2023 15:51:49 -0000

New features:

* Automatic zoom-to-fit on search

* Enable clear button on search text edit

Other:

* Add small padding on the edge label text field

* Don't zoom to fit on cleared search if used has unselected all nodes

* Remove shadow effects from edges that are not completely visible while dragging

4.1.0
=====

Release date:

Fri, 17 Mar 2023 19:48:40 -0000

New features:

* Add setting for shadow effect optimization

* Layout optimization
  - Allow bigger aspect ratio
  - Allow longer edges

* Darker default outline for nodes

* Add subtle outline for edge labels

Bug fixes:

* Fix GitHub Issue #238: Shadow effects introduce performance issues

* Fix GitHub Issue #239: Cannot drag if the drag position is inside the virtual rectangle spanned by an edge

Other:

* Update Italian translations

* Update Dutch translations